// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screen Default 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    nestedScrollEnabled={true}
    showsHorizontalScrollIndicator={false}
    testID="fake-screen"
  >
    <View>
      <Text>
        Foo bar baz
      </Text>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Storyshots Screen Not scrollable 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexGrow": 1,
      }
    }
    testID="fake-screen"
  >
    <Text>
      Foo bar baz
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`Storyshots Screen Not scrollable without safeArea 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexGrow": 1,
      }
    }
    testID="fake-screen"
  >
    <Text>
      Foo bar baz
    </Text>
  </View>
</View>
`;

exports[`Storyshots Screen With custom style 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    nestedScrollEnabled={true}
    showsHorizontalScrollIndicator={false}
    testID="fake-screen"
  >
    <View>
      <Text>
        Foo bar baz
      </Text>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Storyshots Screen With refresh control 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    nestedScrollEnabled={true}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
    showsHorizontalScrollIndicator={false}
    testID="fake-screen"
  >
    <RCTRefreshControl />
    <View>
      <Text>
        Foo bar baz
      </Text>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Storyshots Screen Without safeArea 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    nestedScrollEnabled={true}
    showsHorizontalScrollIndicator={false}
    testID="fake-screen"
  >
    <View>
      <Text>
        Foo bar baz
      </Text>
    </View>
  </RCTScrollView>
</View>
`;
